# webrays

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  package.json
doc/: API_REFERENCE.md  API_REFERENCE_CPP.md  API_REFERENCE_GLSL.md  API_REFERENCE_JS.md  BUILDING.md  BUILDING_LINUX.md  BUILDING_MACOS.md  BUILDING_WEB.md  BUILDING_WINDOWS.md
examples/native/: CMakeLists.txt
examples/native/hello_triangle/: CMakeLists.txt  hello_triangle.c
examples/native/hello_triangle/kernels/: hello.fs.glsl  screen_fill.vs.glsl
examples/web/: example1_hello_world.html  example1_hello_world_ar.html  example1_hello_world_vr.html  example2_cube.html  example3_lighting.html  example4_pt.html
examples/web/css/: examples.css
examples/web/js/: example1_hello_world.js  example1_hello_world_ar.js  example1_hello_world_vr.js  example2_cube.js  example3_lighting.js  example4_pt.js
examples/web/js/common/: webgl_camera.js  webgl_utils.js  webgl_viewer.js  webrays_utils.js
examples/web/js/utils/: webxr-button.js
examples/web/kernels/: bxdf.inc.glsl  common.inc.glsl  generate.glsl  intersection.glsl  light.inc.glsl  post_process.glsl  reflection.inc.glsl  screen_fill.vs.glsl  util.inc.glsl
include/webrays/: webrays.h
src/: CMakeLists.txt  webrays.cpp  webrays_ads.cpp  webrays_ads.h  webrays_context.h  webrays_cpu.cpp  webrays_cpu.h  webrays_gl.cpp  webrays_gl.h  webrays_gl_shaders.h  webrays_loader.js  webrays_math.h  webrays_queue.cpp  webrays_queue.h  webrays_shader_engine.cpp  webrays_tlas.h
